findbugs new Integer
svn path=/dasCore/community/autoplot2011/trunk/; revision=7101